Update DAG-MCNP5 tests to match new system

--- a/mcnp5/.gitignore
+++ b/mcnp5/.gitignore
@@ -1,1 +1,15 @@
+*/Inputs_native
+*/Inputs_mcnp2cad
+*/Inputs_dagmc
+*/Files
+*/Geom_sat
+*/Geom_h5m
+*/Results
+*/*/Inputs_native
+*/*/Inputs_mcnp2cad
+*/*/Inputs_dagmc
+*/*/Files
+*/*/Geom_sat
+*/*/Geom_h5m
+*/*/Results
 xsec_data
